remove frontend to separated project

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-RAILS_MAX_THREADS=5
-DB_USERNAME=
-DB_PASSWORD=
-DB_HOST=
-DB_NAME=
+DB_USERNAME=root
+DB_PASSWORD=xpto
+DB_HOST=localhost
+DB_NAME=acehub_development
+RAILS_ENV=development
